# MoneyTracker

./: .dockerignore  .env.deploy.local  .gitignore  .ignore  .pnp.cjs  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile-build  Dockerfile-next  Makefile  NOTE.md  README.md  apollo.config.js  ci.sh  compose.yaml  do_app_spec.yaml  fork.README.md  index.code-workspace  index.js  main.rs  old_api.snap  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postgress.compose.yaml  pre-commit-config.yaml  schema.d.ts  schema.json  todo.md  turbo.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/bash/: .bashrc  devcontainer-feature.json  install.sh
.devcontainer/meta/: pnpm-workspace.yaml
.devcontainer/meta-test/: pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/: pnpm.yaml
.github/workflows/: _turbo.yaml  build_push_backend.yaml  chromatic.yaml  ci.yaml  deploy-production copy.yaml  deploy-staging.yaml  deploy-to-ecs.yaml  e2e.yaml  terraform.yaml  terraform.yml  test.yaml  turborepo.yaml  wf-check.yaml  wf-deploy.yaml
.husky/: pre-commit
.turbo/: config.json
__Tests__/backend_snapshot/: package.json
__test__/backend_integration_test/: babel.config.js  package.json
__test__/e2e/: .gitignore
__tests__/backend_integration_test/: jest.config.js  (+2 more)
apps/: .gitignore
apps/leptos/: Cargo.toml  Dockerfile
apps/leptos/src/: main.rs
apps/leptos/src/component/: counter.rs
apps/rust/: .env.dev  .env.it  .gitignore  .npmignore  Cargo.toml  Dockerfile  README.md  package.json  types.ts
apps/rust/bindings/: BasicToken.ts  Jwt_.ts  MyErrors.ts  RegisterUserBody.ts  UserRestResponse.ts
apps/rust/src/: db.rs  env.rs  lib.rs  main.rs
apps/rust/src/errors/: mod.rs
apps/rust/src/graphql/: category.rs  entry.rs  mod.rs  user.rs
apps/rust/src/middlewares/: basic_token.rs  bearer_token.rs  mod.rs  respond.rs  user.rs
apps/rust/src/modules/: category.rs  entry.rs  mod.rs  user.rs
apps/rust/src/services/: local_auth.rs  mod.rs
apps/rust/src/utils/: jwt.rs
backend/: .env [example]  .gitignore  README.md  babel.config.json  bugs  docker-compose.yml  dockerfile  example.env  example.env.prod  example.env.test  initMeta.js  jest.config.js  openapi-bundle.yaml  openapi.yaml  package-lock.json  package.json  schema.d.ts  server.js  swagger.js  swagger.yaml  test-compose.yaml  todo.md  tsconfig.json  typedoc.json
bevy/: Cargo.toml
bevy/src/: main.rs
bindings/: BasicTokenRequired.ts
ci/: p.sh  pre-commit.sh  rust  rust.sh  test-be  test-be.sh  test-e2e.sh  test-sb  test-sb.sh
db/: .env.e2e  index.js  package.json
e2e/: .eslintrc.js  package.json  playwright.config.ts
echo/: package.json
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  schema.d.ts  todo.txt  tsconfig.json  vite.config.ts
integration_test/: .eslintrc  package.json  pnpm-lock.yaml
pani-puri-macro-drive/: Cargo.toml
patches/: @types__json-schema@7.0.12.patch  storybook-dark-mode@3.0.0.patch  twin.macro@3.3.1.patch
say_hi_macro_derive/: Cargo.toml
snapshot/: introspect.ts  package.json  tsconfig.json
snapshots/: create_many_categories.snap  create_one_category.snap  delete_many_categories.snap  delete_one_category.snap  entry.snap  get_categories.snap  update_one_category.snap
src/: db.rs  graphql.rs  main.rs  models.rs  state.rs
src_mongo/: main.rs
terraform/: .terraform.lock.hcl  0-providers.tf  0-vars.tf  0.terraform.tf  1-database.tf  2-backend.tf  _using ecs.tf  atlas.tf  aws.tf  general.tf  secrets.tfvars [example]  secrets.tfvars.json [example]
types/: httpErrors.d.ts  schema.d.ts  tsconfig.json
(+1350 files in other folders)
