[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
