[package]
default-run="graphql-backend"
name = "graphql-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
backend_macro = { path = "../../pkgs/backend_macro" }

rust_decimal = { version = "1.32", features = ["serde", "tokio-pg", "db-tokio-postgres", "db-postgres"] }
rust_decimal_macros = "1.32"

sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres","chrono", "json" ] }
sqlx-postgres = { version = "0.7.1", features = [ "rust_decimal" ] }
actix-web = "4.3.1"
async-graphql = {version = "5.0.10"}
async-graphql-actix-web = "5.0.10"
base64 = "0.21.2"
bcrypt = "0.15.0"
data-encoding = "2.4.0"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
jwt = "0.16.0"
rand = "0.8.5"
serde = { version= "1.0.176", features = ["derive"] }
sha2 = "0.10.7"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde_json = "1.0.104"
thiserror = "1.0.47"
derive_more = "0.99.17"
ts-rs = "7.0.0"
actix-session = "0.7.2"
ring = "0.16.20"
anyhow = "1.0.75"
hmac = "0.12.1"
convert_case = "0.6.0"
async-trait = "0.1.73"
actix-cors = "0.6.4"
